welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {

def faireV()
{
	avance()
	baisseBrosse()
	gauche()
	leveBrosee()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
}




}
